--- a/buildspec.yml
+++ b/buildspec.yml
@@ -19,7 +19,7 @@ phases:
       # Run unit tests
       # - yarn test
       # Use cloudformation to packaged it and push to S3
-      - aws cloudformation package --template-file template.yml --s3-bucket creka-dev-codebuild --output-template-file packaged-template.yml --role-arn $CLOUD_FORMATION_ROLE
+      - aws cloudformation package --template-file template.yml --s3-bucket creka-dev-codebuild --output-template-file packaged-template.yml
     #finally:
       #- Build command failures
   post_build:
