--- a/buildspec.yml
+++ b/buildspec.yml
@@ -27,7 +27,7 @@ phases:
       # Use cloudformation deploy
       # You can use --parameter-overrides to overrides parameters in template.yml
       # Example: aws cloudformation deploy --parameter-overrides Stage=Stg Region=ap-northeast-1
-      - aws cloudformation deploy --template-file packaged-template.yml --stack-name creka-tasks-dev --capabilities CAPABILITY_NAMED_IAM --role-arn $CLOUD_FORMATION_ROLE
+      - aws cloudformation deploy --template-file packaged-template.yml --stack-name creka-tasks-dev --capabilities CAPABILITY_NAMED_IAM
 artifacts:
   type: zip
   files:
