--- a/buildspec.yml
+++ b/buildspec.yml
@@ -19,7 +19,7 @@ phases:
       # Run unit tests
       # - yarn test
       # Use cloudformation to packaged it and push to S3
-      - aws cloudformation package --template-file template.yml --s3-bucket pipeline-artifac-lambda-store-bucket-dev --output-template-file packaged-template.yml
+      - aws cloudformation package --template-file template.yml --s3-bucket $BUCKET_NAME --output-template-file packaged-template.yml
     #finally:
       #- Build command failures
   post_build:
@@ -27,7 +27,7 @@ phases:
       # Use cloudformation deploy
       # You can use --parameter-overrides to overrides parameters in template.yml
       # Example: aws cloudformation deploy --parameter-overrides Stage=Stg Region=ap-northeast-1
-      - aws cloudformation deploy --template-file packaged-template.yml --stack-name creka-tasks-dev --capabilities CAPABILITY_NAMED_IAM
+      - aws cloudformation deploy --template-file packaged-template.yml --stack-name creka-tasks-dev --capabilities CAPABILITY_NAMED_IAM --parameter-overrides CodeDeployRole=$DEPLOY_ROLE
 artifacts:
   type: zip
   files:
